# Demeter

./: .gitignore  CMakeLists.txt  README.md  runtests.sh  test.dm
core/: CMakeLists.txt
core/include/: Context.h  ast.h  core.hpp
core/src/: CMakeLists.txt  lexer.l  parser.y
demeter/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  example-test.cpp
